--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,7 @@ padding-bottom: 25px;
 .header-address {
     padding-top: 32px;
     padding-bottom: 32px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-list-link {
@@ -495,6 +496,7 @@ line-height: 1.714;
 letter-spacing: 0.03em;
 color: var(--footer-color);
 text-decoration: none;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .address .mail-address {
@@ -718,4 +720,50 @@ transform: translateY(0);
 /* ========= FOOTER=============  */
 .second-footer-mail {
     text-decoration: underline;
+}
+/* BACKDROP */
+.backdrop {
+    background: rgba(0, 0, 0, 0.2);
+    position:fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition:  1800ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.modal {
+    position: absolute;
+    background: var(--hero-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    min-height: 581px;
+}
+
+
+.close-btn-svg {
+    width: 11px;
+    height:11px;
+    
+}
+.close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    background-color: var(--hero-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+
+
+}
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none; 
 }
